Fix issue #346